--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <button class="twitter-button" id="twitter" title='Tweet'>
                 <i class="fab fa-twitter"></i>
             </button>
-            <button id="new-quote">New Quote</button>
+            <button id="new-quote">Nova izreka</button>
         </div>
     </div>
     <!-- loader -->
 
     <div class="loader" id="loader">
-        
+
     </div>
     <!-- Script -->
     <script src="script.js"></script>
